# GABBE

./: .gitignore  CONTRIBUTING.md  README.md  plan-gabbeMinimumViableAgent.prompt.md  pyproject.toml
.github/workflows/: ci.yml
agents/: AGENTS.md  CONSTITUTION.md
agents/guides/: 00-index.md
agents/scripts/: check_skills_docs.py  compile_skills.py  comprehensive_checker.py  validate_integrity.py  validate_links.py  verify_setup_simulation.py  verify_triggers_and_mcps.py  verify_use_cases.py
agents/skills/: 00-index.md
agents/templates/: 00-index.md
docs/: CLI_REFERENCE.md  MCP_CONFIGURATIONS.md  PLATFORM_CONTROLS.md  QUICK_COMMANDS.md  QUICK_GUIDE.md  README_FULL.md  VERIFICATION_GUIDE.md
gabbe/: __init__.py  audit.py  brain.py  budget.py  config.py  context.py  database.py  escalation.py  forecast.py  gateway.py  hardstop.py  llm.py  main.py  mcp_server.py  policy.py  replay.py  status.py  sync.py
gabbe/tests/: conftest.py  test_audit.py  test_brain.py  test_brain_integration.py  test_budget.py  test_config.py  test_e2e_workflow.py  test_escalation.py  test_forecast.py  test_gateway.py  test_llm.py  test_llm_backoff.py  test_llm_retries.py  test_mcp_server.py  test_mva_core.py  test_policy.py  test_replay.py  test_route.py  test_sync.py  test_sync_markers.py
scripts/: init.py
scripts/tests/: conftest.py  test_context.py  test_database.py  test_dynamic_setup.py  test_e2e.py  test_escalation.py  test_hardstop.py  test_init.py  test_main.py  test_mcp_server.py  test_policy.py  test_status.py  test_sync_fallback.py  test_verify.py
(+163 files in other folders)
