[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gabbe"
version = "0.7.0"
description = "Generative Architectural Brain Base Engine - Agentic Engineering Kit"
readme = "README.md"
requires-python = ">=3.8"
license = "CC-BY-SA-4.0"
authors = [
  {name = "Andrei Nicolae Besleaga"}
]
keywords = ["agentic", "ai", "engineering", "cli", "llm", "brain-mode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "requests>=2.28,<3.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
gabbe = "gabbe.main:main"

[project.urls]
"Homepage" = "https://github.com/andreibesleaga/GABBE"

[tool.setuptools.packages.find]
include = ["gabbe*"]

[tool.pytest.ini_options]
testpaths = ["gabbe/tests", "scripts/tests"]
